Fix print styles to stop page break in Safari

--- a/assets/css/print.css
+++ b/assets/css/print.css
@@ -1,28 +1,74 @@
 :root {
-  --highlight: #000000;
+  --black: #000000;
+}
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	vertical-align: baseline;
+	margin: 0;
+	border: 0;
+	padding: 0;
+	font-size: 100%;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
 }
 
 @page {
-  background: #ffffff;
-  margin: 0.75cm;
-  margin-top: 1cm;
+  margin: 0.7cm;
+  margin-top: 0.5cm;
+}
+
+body {
+  font-size: 9.5pt;
+  line-height: 1.3;
 }
 
 h1 {
-  margin-bottom: 5pt;
+  margin-bottom: 4pt;
+  font-size: 20pt;
 }
 
 h2 {
   margin-top: 12pt;
-  border-bottom: 1px solid var(--highlight);
+  border-bottom: 1pt solid var(--black);
+  font-size: 14pt;
 }
 
 h3 {
-  margin-bottom: 3pt;
+  margin-top: 11pt;
+  font-size: 12pt;
 }
 
-h2 + p, h2 + ul, h2 + ol, h3 + p, h3 + ul, p + ul {
-	margin-top: 0.5rem;
+p, ul, ol {
+	margin-top: 8pt;
+}
+
+h3 + p, h3 + ul, p + ul {
+	margin-top: 5pt;
+}
+
+p:first-child, ol:first-child, ul:first-child, li:first-child {
+	margin-top: 0;
 }
 
 ul {
@@ -30,14 +76,14 @@ ul {
   padding: 0;
 }
 
-#cv {
-  font-size: 10pt;
-  line-height: 1.25;
+#about {
+  margin-top: 10pt;
 }
 
 #cv a {
   font-weight: bold;
-  color: var(--highlight);
+  text-decoration: none;
+  color: var(--black);
 }
 
 #cv details > summary {
@@ -53,6 +99,7 @@ ul {
 }
 
 #experience {
+  float: left;
   width: 70%;
   padding-right: 15pt;
 }
@@ -63,6 +110,7 @@ ul {
 }
 
 #learning {
+  clear: both;
   page-break-before: always;
 }
 
@@ -70,16 +118,8 @@ ul {
   text-align: center;
 }
 
-#print {
-  display: none;
-}
-
 #social {
   display: none;
-}
-
-.block {
-	margin-top: 15pt;
 }
 
 .dissertation {
@@ -88,8 +128,10 @@ ul {
 
 .group-list {
 	display: grid;
-	grid-template-columns: 20% 80%;
-	align-items: center;
+  grid-template-columns: 20% 80%;
+  grid-row-gap: 5pt;
+  align-items: center;
+  margin-top: 10pt;
 }
 
 .group-list h3, .group-list h3 p, .group-list .horizontal-list {
@@ -107,4 +149,8 @@ ul {
 .horizontal-list li:not(:last-child):after {
 	content: " \2219 ";
 	display: inline;
+}
+
+.screen-only {
+  display: none;
 }
